Created Contracts for Merch and Collection, Updated schema and endpoints for these 2 new entities
