# pages/api/collections/[collectionId].ts
@@ -1,9 +1,12 @@
 // Next.js API route support: https://nextjs.org/docs/api-routes/introduction
 import type { NextApiRequest, NextApiResponse } from "next";
 import { handleError, ErrorResponse } from "../../../lib/prisma-util";
-import { PrismaClient, Collection } from "@prisma/client";
+import { PrismaClient, Collection , Prisma} from "@prisma/client";
+import { getServerSession } from "next-auth";
+import { authOptions } from "../auth/[...nextauth]";
 
 const prisma = new PrismaClient();
+type CollectionwithMerch = Prisma.EventGetPayload<{ include: { merchandise: true } }>;
 
 /**
  * @swagger
