# pages/api/json-schema.swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Converted from json-schema.swagger.yaml with typeconv
-  version: "1"
+  version: '1'
   x-id: json-schema.swagger.yaml
   x-comment: >-
     Generated from prisma/generated/json-schema/json-schema.json by
@@ -26,49 +26,55 @@ components:
           type: string
         username:
           type: string
+        bio:
+          type: string
         email:
           type: string
         notificationBySMS:
-          default: "true"
+          default: 'true'
           type: boolean
         notificationByEmail:
-          default: "true"
+          default: 'true'
           type: boolean
         createdCollections:
           items:
-            $ref: "#/components/schemas/Collection"
+            $ref: '#/components/schemas/Collection'
           type: array
         createdCommunities:
           items:
-            $ref: "#/components/schemas/Community"
+            $ref: '#/components/schemas/Community'
           type: array
         joinedCommunities:
           items:
-            $ref: "#/components/schemas/Community"
+            $ref: '#/components/schemas/Community'
           type: array
         joinedChannels:
           items:
-            $ref: "#/components/schemas/UsersOnChannels"
+            $ref: '#/components/schemas/UsersOnChannels'
           type: array
         posts:
           items:
-            $ref: "#/components/schemas/Post"
+            $ref: '#/components/schemas/Post'
           type: array
         likedPosts:
           items:
-            $ref: "#/components/schemas/Post"
+            $ref: '#/components/schemas/Post'
           type: array
         comments:
           items:
-            $ref: "#/components/schemas/Comment"
+            $ref: '#/components/schemas/Comment'
           type: array
         likedComments:
           items:
-            $ref: "#/components/schemas/Comment"
+            $ref: '#/components/schemas/Comment'
           type: array
         tickets:
           items:
-            $ref: "#/components/schemas/Ticket"
+            $ref: '#/components/schemas/Ticket'
+          type: array
+        merchandise:
+          items:
+            $ref: '#/components/schemas/Merchandise'
           type: array
       type: object
     Post:
@@ -88,16 +94,16 @@ components:
         isPinned:
           type: boolean
         creator:
-          $ref: "#/components/schemas/User"
+          $ref: '#/components/schemas/User'
         channel:
-          $ref: "#/components/schemas/Channel"
+          $ref: '#/components/schemas/Channel'
         likes:
           items:
-            $ref: "#/components/schemas/User"
+            $ref: '#/components/schemas/User'
           type: array
         comments:
           items:
-            $ref: "#/components/schemas/Comment"
+            $ref: '#/components/schemas/Comment'
           type: array
       type: object
     Community:
@@ -115,7 +121,7 @@ components:
             type: string
           type: array
         maxMembers:
-          default: "100"
+          default: '100'
           type: integer
         communityType:
           enum:
@@ -124,14 +130,14 @@ components:
           default: NFT
           type: string
         creator:
-          $ref: "#/components/schemas/User"
+          $ref: '#/components/schemas/User'
         members:
           items:
-            $ref: "#/components/schemas/User"
+            $ref: '#/components/schemas/User'
           type: array
         channels:
           items:
-            $ref: "#/components/schemas/Channel"
+            $ref: '#/components/schemas/Channel'
           type: array
       type: object
     Channel:
@@ -151,21 +157,21 @@ components:
           type: string
         members:
           items:
-            $ref: "#/components/schemas/UsersOnChannels"
+            $ref: '#/components/schemas/UsersOnChannels'
           type: array
         community:
-          $ref: "#/components/schemas/Community"
+          $ref: '#/components/schemas/Community'
         posts:
           items:
-            $ref: "#/components/schemas/Post"
+            $ref: '#/components/schemas/Post'
           type: array
       type: object
     UsersOnChannels:
       properties:
         user:
-          $ref: "#/components/schemas/User"
+          $ref: '#/components/schemas/User'
         channel:
-          $ref: "#/components/schemas/Channel"
+          $ref: '#/components/schemas/Channel'
       type: object
     Comment:
       properties:
@@ -174,20 +180,20 @@ components:
         date:
           type: string
         post:
-          $ref: "#/components/schemas/Post"
+          $ref: '#/components/schemas/Post'
         commenter:
-          $ref: "#/components/schemas/User"
+          $ref: '#/components/schemas/User'
         likes:
           items:
-            $ref: "#/components/schemas/User"
+            $ref: '#/components/schemas/User'
           type: array
         originalComment:
           anyOf:
-            - $ref: "#/components/schemas/Comment"
+            - $ref: '#/components/schemas/Comment'
             - nullable: true
         replies:
           items:
-            $ref: "#/components/schemas/Comment"
+            $ref: '#/components/schemas/Comment'
           type: array
       type: object
     Event:
@@ -220,7 +226,7 @@ components:
             - TRAVEL_OUTDOOR
           type: array
         address:
-          $ref: "#/components/schemas/Address"
+          $ref: '#/components/schemas/Address'
         startDate:
           type: string
         endDate:
@@ -258,7 +264,7 @@ components:
           type: string
         tickets:
           items:
-            $ref: "#/components/schemas/Ticket"
+            $ref: '#/components/schemas/Ticket'
           type: array
         ticketURIs:
           items:
@@ -281,7 +287,7 @@ components:
           type: string
         Event:
           items:
-            $ref: "#/components/schemas/Event"
+            $ref: '#/components/schemas/Event'
           type: array
       type: object
     Ticket:
@@ -303,14 +309,14 @@ components:
         description:
           type: string
         event:
-          $ref: "#/components/schemas/Event"
+          $ref: '#/components/schemas/Event'
         promotion:
           items:
-            $ref: "#/components/schemas/Promotion"
+            $ref: '#/components/schemas/Promotion'
           type: array
         users:
           items:
-            $ref: "#/components/schemas/User"
+            $ref: '#/components/schemas/User'
           type: array
       type: object
     Promotion:
@@ -333,7 +339,7 @@ components:
         endDate:
           type: string
         ticket:
-          $ref: "#/components/schemas/Ticket"
+          $ref: '#/components/schemas/Ticket'
       type: object
     Collection:
       properties:
@@ -341,8 +347,6 @@ components:
           type: integer
         description:
           type: string
-        fixedPrice:
-          type: number
         currency:
           enum:
             - USD
@@ -358,23 +362,41 @@ components:
             - SOLD
           default: CREATED
           type: string
-        collections:
+        merchandise:
           items:
-            $ref: "#/components/schemas/CollectionMedia"
+            $ref: '#/components/schemas/Merchandise'
+          type: array
+        fixedPrice:
+          type: number
+        scAddress:
+          items:
+            type: string
+          type: array
+        merchURIs:
+          items:
+            type: string
           type: array
         creator:
-          $ref: "#/components/schemas/User"
+          $ref: '#/components/schemas/User'
       type: object
-    CollectionMedia:
+    Merchandise:
       properties:
-        collectionMediaId:
+        merchId:
           type: integer
         media:
           type: string
         description:
           type: string
-        numOfMerch:
+        price:
+          type: number
+        totalMerchSupply:
+          type: integer
+        currMerchSupply:
           type: integer
         collection:
-          $ref: "#/components/schemas/Collection"
+          $ref: '#/components/schemas/Collection'
+        users:
+          items:
+            $ref: '#/components/schemas/User'
+          type: array
       type: object
